# tf-rmm

./: .gitignore  .gitmodules  AGENTS.md  session-ses_2710.md  tfrmm.py
.sisyphus/: ralph-loop.local.md
app/device_assignment/el0_app/spdm_emu/: CMakeLists.txt
app/device_assignment/el0_app/spdm_requester/: CMakeLists.txt
app/device_assignment/el0_app/src/: dev_assign_el0_app.c  dev_tdisp_cmds.c  rme_dvsec.c
cmake/Modules/: FindRustSpdm.cmake
configs/spdm-emu/: 0002-Skip-SPDM-Responder-Validator-components.patch
docs/design/: spdm-tdisp-flow.md
lib/stack_protector/src/: stack_protector.c
plat/host/harness/include/: host_rmi_wrappers.h
plat/host/harness/src/: host_rmi_wrappers.c
plat/host/host_build/src/: host_da.c  host_realm.h  host_setup.c  host_spdm_rsp_ifc.c
runtime/rmi/: pdev.c
rust-spdm-minimal/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
rust-spdm-minimal/doc/: api_analysis.md  cmake_integration.md  overview.md  phase_plan.md  spdm-message-k-analysis.md  technical_design.md
rust-spdm-minimal/include/: rust_spdm.h
rust-spdm-minimal/src/: context.rs  error.rs  lib.rs
rust-spdm-minimal/src/crypto/: aead.rs  dhe.rs  hash.rs  hkdf.rs  hmac.rs  mod.rs  rand.rs  sign.rs
rust-spdm-minimal/src/ffi/: libspdm.rs  mod.rs  pci_ide_km.rs  pci_tdisp.rs
rust-spdm-minimal/src/message/: codec.rs  header.rs  mod.rs
rust-spdm-minimal/src/protocol/: algorithms.rs  capabilities.rs  certificate.rs  digest.rs  end_session.rs  finish.rs  key_exchange.rs  mod.rs  version.rs
rust-spdm-minimal/src/session/: context.rs  keys.rs  mod.rs  secured.rs
